--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "nodejs-in-depth",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "tuannm99 <tuannm@foobla.com>",
-  "license": "MIT",
-  "dependencies": {
-    "bluebird": "^3.7.2"
-  }
+    "name": "nodejs-in-depth",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "tuannm99 <tuannm@foobla.com>",
+    "license": "MIT",
+    "scripts": {
+        "test": "jest"
+    },
+    "jest": {
+        "testEnvironment": "node"
+    },
+    "dependencies": {
+        "bluebird": "^3.7.2",
+        "express": "^4.19.2",
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0",
+        "uuid": "^9.0.1"
+    }
 }
